# AI_Trade_CN

./: README.md  ai_summary.py  backtest_dynamic.py  backtest_momentum_formulas.py  blend_backtest.py  check_dates.py  compare_momentum_timing.py  config.py  config_strategy.py  live_signal.py  main.py  pyproject.toml  run.sh  test_dual_momentum.py  train_test_backtest.py  动态策略探索详情.md
data/: etf_pool.json  fetcher.py  paper_trading.db
data/market/: etf_159819.parquet  etf_159915.parquet  etf_159930.parquet  etf_159941.parquet  etf_510050.parquet  etf_510300.parquet  etf_510500.parquet  etf_510880.parquet  etf_511010.parquet  etf_512010.parquet  etf_512690.parquet  etf_512880.parquet  etf_513100.parquet  etf_518880.parquet  etf_562500.parquet  etf_588000.parquet  index_000300.parquet
engine/: backtest.py  dynamic_timing.py  momentum_compare.py  optimize.py  optimizer.py  paper_trader.py  risk.py  signals.py  timing.py
output/: compare_momentum_timing.csv  daily_report.md  dynamic_timing_backtest.md  entry_check.md  latest_signal.md
